--- a/templates/includes/alerts.html
+++ b/templates/includes/alerts.html
@@ -3,14 +3,13 @@
 {% if messages %}
 <div class="messages" id="alert-messages">
     {% for message in messages %}
-    <div {% if message.tags %} class="alert alert-{{ message.tags }}" {% endif %} role="alert">
+    <div {% if message.tags %} class="alert  alert-dismissible fade show alert-{{ message.tags }}" {% endif %} role="alert">
         {% if message.level == DEFAULT_MESSAGE_LEVELS_ERROR %}
         Error:
         {% endif %}
         {{ message }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+    
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     {% endfor %}
 </div>
